[package]
edition = "2021"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"